# my_booking_template

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
sql/: init.sql
src/my_booking/: config.py  dependencies.py  main.py
src/my_booking/api/: bookings.py  rooms.py
src/my_booking/db/: database.py  models.py  repository.py
tests/: conftest.py  test_booking.py  test_booking_validation.py  test_rooms.py
