[tool.poetry]
name = "my-booking"
version = "0.1.0"
description = "Simple hotel booking service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.1"
asyncpg = "^0.29.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.44"
psycopg2-binary = "^2.9.11"
greenlet = "^3.2.4"
aiosqlite = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.0"
pre-commit = "^4.0.1"
httpx = "^0.27.0"
pytest-asyncio = "^1.2.0"
python-dotenv = "^1.1.1"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]